--- a/services/libs/integrations/package.json
+++ b/services/libs/integrations/package.json
@@ -27,6 +27,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.merge": "^4.6.2",
     "sanitize-html": "^2.10.0",
+    "snowflake-sdk": "^1.14.0",
     "verify-github-webhook": "^1.0.1"
   }
 }
