move snowflake to lib

--- a/services/libs/integrations/package.json
+++ b/services/libs/integrations/package.json
@@ -19,6 +19,7 @@
     "@crowd/logging": "workspace:*",
     "@crowd/telemetry": "workspace:*",
     "@crowd/types": "workspace:*",
+    "@crowd/snowflake": "workspace:*",
     "@gitbeaker/rest": "^40.1.2",
     "@octokit/auth-app": "^4.0.13",
     "@octokit/graphql": "^5.0.6",
@@ -27,7 +28,6 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.merge": "^4.6.2",
     "sanitize-html": "^2.10.0",
-    "snowflake-sdk": "^1.14.0",
     "verify-github-webhook": "^1.0.1"
   }
 }
