--- a/services/libs/snowflake/package.json
+++ b/services/libs/snowflake/package.json
@@ -5,11 +5,13 @@
     "lint": "npx eslint --ext .ts src --max-warnings=0",
     "format": "npx prettier --write \"src/**/*.ts\"",
     "format-check": "npx prettier --check .",
-    "tsc-check": "tsc --noEmit"
+    "tsc-check": "tsc --noEmit",
+    "sf": "tsx src/test.ts"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "tsx": "^4.7.1"
   },
   "dependencies": {
     "snowflake-sdk": "^1.14.0"
