--- a/services/apps/merge_suggestions_worker/package.json
+++ b/services/apps/merge_suggestions_worker/package.json
@@ -16,6 +16,7 @@
     "@crowd/archetype-standard": "workspace:*",
     "@crowd/archetype-worker": "workspace:*",
     "@crowd/common": "workspace:*",
+    "@crowd/common_services": "workspace:*",
     "@crowd/data-access-layer": "workspace:*",
     "@crowd/feature-flags": "workspace:*",
     "@crowd/logging": "workspace:*",
