--- a/scripts/scaffold.yaml
+++ b/scripts/scaffold.yaml
@@ -153,6 +153,7 @@ services:
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
       - KAFKA_CFG_LOG_DIRS=/opt/bitnami/kafka/data
       - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+      - KAFKA_KRAFT_CLUSTER_ID=OTMwNzFhYTY1ODNiNGE5OT
     ports:
       - '9092:9092'
       - '9093:9093'
