--- a/scripts/services/docker/Dockerfile.integration_sync_worker
+++ b/scripts/services/docker/Dockerfile.integration_sync_worker
@@ -17,5 +17,6 @@ WORKDIR /usr/crowd/app
 RUN corepack enable
 
 COPY --from=builder /usr/crowd/app/node_modules ./node_modules
+COPY --from=builder /usr/crowd/app/services/base.tsconfig.json ./services/base.tsconfig.json
 COPY --from=builder /usr/crowd/app/services/libs ./services/libs
 COPY --from=builder /usr/crowd/app/services/apps/integration_sync_worker/ ./services/apps/integration_sync_worker
