Add @crowd/queue dependency to data-access-layer
We'll be sending kafka messages when inserting activities

--- a/services/libs/data-access-layer/package.json
+++ b/services/libs/data-access-layer/package.json
@@ -14,6 +14,7 @@
     "@crowd/logging": "workspace:*",
     "@crowd/questdb": "workspace:*",
     "@crowd/redis": "workspace:*",
+    "@crowd/queue": "workspace:*",
     "@crowd/telemetry": "workspace:*",
     "@crowd/types": "workspace:*",
     "@questdb/nodejs-client": "~3.0.0",
