--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start:job-generator": "SERVICE=job-generator TS_NODE_TRANSPILE_ONLY=true tsx src/bin/job-generator.ts",
     "start:job-generator:dev": "nodemon --watch \"src/**/*.ts\" --watch ../services/libs -e ts,json --exec \"pnpm run start:job-generator\"",
     "start:job-generator:dev:local": "set -a && . ./.env.dist.local && . ./.env.override.local && set +a && pnpm run start:job-generator:dev",
-    "build": "tsc && pnpm run build:documentation && cp package*json dist/ && cp .sequelizerc dist/.sequelizerc ",
+    "build": "tsc && cp package*json dist/ && cp .sequelizerc dist/.sequelizerc ",
     "test": "../scripts/cli scaffold up-test && jest --clearCache && set -a && . ./.env.dist.local && . ./.env.test && set +a && NODE_ENV=test SERVICE=test jest --runInBand --verbose --forceExit",
     "sequelize-cli:source": "pnpm run build && npx sequelize --config src/database/sequelize-cli-config.ts --migrations-source-path src/database/migrations",
     "sequelize-cli:build": "npx sequelize --config database/sequelize-cli-config.js --migrations-compiled-path database/migrations",
@@ -18,7 +18,6 @@
     "tsc-check": "tsc --noEmit",
     "script": "SERVICE=script TS_NODE_TRANSPILE_ONLY=true tsx",
     "script:continue-run": "SERVICE=script TS_NODE_TRANSPILE_ONLY=true tsx src/bin/scripts/continue-run.ts",
-    "script:change-tenant-plan": "SERVICE=script TS_NODE_TRANSPILE_ONLY=true tsx src/bin/scripts/change-tenant-plan.ts",
     "script:trigger-webhook": "SERVICE=script TS_NODE_TRANSPILE_ONLY=true tsx src/bin/scripts/trigger-webhook.ts",
     "script:send-weekly-analytics-email": "SERVICE=script TS_NODE_TRANSPILE_ONLY=true tsx src/bin/scripts/send-weekly-analytics-email.ts",
     "script:merge-organizations": "SERVICE=script TS_NODE_TRANSPILE_ONLY=true tsx src/bin/scripts/merge-organizations.ts",
@@ -59,8 +58,6 @@
     "@octokit/graphql": "^4.8.0",
     "@octokit/request": "^5.6.3",
     "@opensearch-project/opensearch": "^2.11.0",
-    "@sendgrid/eventwebhook": "^7.7.0",
-    "@sendgrid/mail": "7.2.6",
     "@slack/web-api": "^6.7.2",
     "@superfaceai/one-sdk": "^1.3.0",
     "@superfaceai/passport-twitter-oauth2": "^1.0.0",
