revert discord-ws

--- a/scripts/builders/backend.env
+++ b/scripts/builders/backend.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.backend"
 CONTEXT="../"
 REPO="crowddotdev/backend"
-SERVICES="api job-generator"
+SERVICES="api job-generator discord-ws"
