--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,9 @@
     "script:syncActivities": "SERVICE=script TS_NODE_TRANSPILE_ONLY=true tsx src/bin/scripts/syncActivities.ts",
     "script:refreshGithubRepoSettings": "SERVICE=script TS_NODE_TRANSPILE_ONLY=true tsx src/bin/scripts/refresh-github-repo-settings.ts"
   },
+  "lint-staged": {
+    "src/**/*.*": ["eslint", "prettier --write"]
+  },
   "dependencies": {
     "@aws-sdk/client-comprehend": "^3.159.0",
     "@aws-sdk/hash-node": "^3.226.0",
@@ -154,6 +157,7 @@
     "eslint-config-airbnb-typescript": "^16.1.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
+    "lint-staged": "^15.4.3",
     "node-mocks-http": "1.9.0",
     "nodemon": "2.0.4",
     "prettier": "^3.3.3",
