--- a/services/archetypes/standard/package.json
+++ b/services/archetypes/standard/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@crowd/common": "workspace:*",
+    "@crowd/common_services": "workspace:*",
     "@crowd/database": "workspace:*",
     "@crowd/integrations": "workspace:*",
     "@crowd/logging": "workspace:*",
     "@crowd/questdb": "workspace:*",
+    "@crowd/queue": "workspace:*",
     "@crowd/redis": "workspace:*",
     "@crowd/temporal": "workspace:*",
     "@questdb/nodejs-client": "~3.0.0",
