--- a/scripts/services/docker/Dockerfile.backend
+++ b/scripts/services/docker/Dockerfile.backend
@@ -1,7 +1,7 @@
 FROM node:20-alpine as builder
 
 WORKDIR /usr/crowd/app
-RUN corepack enable && apk add --update --no-cache python3 build-base && ln -sf python3 /usr/bin/python &&  python3 -m venv .venv && source .venv/bin/activate && python3 -m ensurepip && pip3 install --no-cache --upgrade pip setuptools
+RUN npm install -g corepack@latest && corepack enable pnpm && apk add --update --no-cache python3 build-base && ln -sf python3 /usr/bin/python &&  python3 -m venv .venv && source .venv/bin/activate && python3 -m ensurepip && pip3 install --no-cache --upgrade pip setuptools
 
 COPY ./pnpm-workspace.yaml ./pnpm-lock.yaml ./
 RUN pnpm fetch
@@ -13,7 +13,7 @@ RUN pnpm i --frozen-lockfile
 FROM node:20-alpine as runner
 
 WORKDIR /usr/crowd/app
-RUN corepack enable
+RUN npm install -g corepack@latest && corepack enable pnpm
 
 COPY --from=builder /usr/crowd/app/node_modules ./node_modules
 COPY --from=builder /usr/crowd/app/services/libs ./services/libs
