--- a/services/libs/nango/package.json
+++ b/services/libs/nango/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@crowd/common": "workspace:*",
     "@crowd/types": "workspace:*",
+    "@nangohq/frontend": "^0.52.4",
     "@nangohq/node": "^0.50.0",
     "@nangohq/types": "^0.50.0"
   }
