--- a/services/apps/nango_webook_api/package.json
+++ b/services/apps/nango_webook_api/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@crowd/common": "workspace:*",
     "@crowd/logging": "workspace:*",
-    "@crowd/redis": "workspace:*",
-    "@crowd/queue": "workspace:*",
+    "@crowd/nango": "workspace:*",
+    "@crowd/temporal": "workspace:*",
     "@crowd/data-access-layer": "workspace:*",
     "@crowd/types": "workspace:*",
+    "@crowd/telemetry": "workspace:*",
     "@types/express": "^4.17.17",
     "bunyan-middleware": "^1.0.2",
     "cors": "^2.8.5",
