--- a/backend/package.json
+++ b/backend/package.json
@@ -169,5 +169,5 @@
     "tsx": "^4.7.1",
     "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
+  "packageManager": "pnpm@9.15.0"
 }
