--- a/scripts/services/docker/Dockerfile.script_executor
+++ b/scripts/services/docker/Dockerfile.script_executor
@@ -1,6 +1,6 @@
 FROM node:20-alpine
 
-RUN npm install -g corepack@latest && corepack enable pnpm && corepack prepare pnpm@9.15.0 --activate
+RUN npm install -g corepack@latest && corepack enable pnpm && corepack use pnpm@9.15.0
 
 WORKDIR /usr/crowd/app
 
