--- a/scripts/services/docker/Dockerfile.organizations_enrichment_worker
+++ b/scripts/services/docker/Dockerfile.organizations_enrichment_worker
@@ -3,7 +3,7 @@ FROM node:20-alpine as builder
 RUN apk add --no-cache python3 make g++
 
 WORKDIR /usr/crowd/app
-RUN npm install -g corepack@latest && corepack enable pnpm
+RUN npm install -g corepack@latest && corepack enable pnpm && corepack use pnpm@9.15.0
 
 COPY ./pnpm-workspace.yaml ./pnpm-lock.yaml ./
 RUN pnpm fetch
@@ -14,7 +14,7 @@ RUN pnpm i --frozen-lockfile
 FROM node:20-bookworm-slim as runner
 
 WORKDIR /usr/crowd/app
-RUN npm install -g corepack@latest && corepack enable pnpm && apt update && apt install -y ca-certificates --no-install-recommends && rm -rf /var/lib/apt/lists/*
+RUN npm install -g corepack@latest && corepack enable pnpm && corepack use pnpm@9.15.0 && apt update && apt install -y ca-certificates --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /usr/crowd/app/node_modules ./node_modules
 COPY --from=builder /usr/crowd/app/services/base.tsconfig.json ./services/base.tsconfig.json
