getting activity data to tinybird with kafka-connect http sink

--- a/scripts/scaffold.yaml
+++ b/scripts/scaffold.yaml
@@ -170,11 +170,14 @@ services:
       - /etc/kafka-connect/worker-local.properties
       - /etc/kafka-connect/console-local-sink.properties
       - /etc/kafka-connect/questdb-local-sink.properties
+      - /etc/kafka-connect/tinybird-local-sink.properties
+
     volumes:
       - kafka-connect-dev:/storage
       - ./scaffold/kafka-connect/worker-local.properties:/etc/kafka-connect/worker-local.properties
       - ./scaffold/kafka-connect/console-local-sink.properties:/etc/kafka-connect/console-local-sink.properties
       - ./scaffold/kafka-connect/questdb-local-sink.properties:/etc/kafka-connect/questdb-local-sink.properties
+      - ./scaffold/kafka-connect/tinybird-local-sink.properties:/etc/kafka-connect/tinybird-local-sink.properties
     networks:
       - crowd-bridge
 
