--- a/scripts/scaffold/kafka-connect/Dockerfile
+++ b/scripts/scaffold/kafka-connect/Dockerfile
@@ -6,6 +6,8 @@ RUN yum install -y jq findutils unzip
 
 RUN confluent-hub install snowflakeinc/snowflake-kafka-connector:2.5.0 --no-prompt
 RUN confluent-hub install questdb/kafka-questdb-connector:0.12 --no-prompt
+COPY kafka-connect-http-8.1.25/ /usr/share/confluent-hub-components/kafka-connect-http-8.1.25/
+
 
 VOLUME /storage
 
