--- a/services/apps/script_executor_worker/package.json
+++ b/services/apps/script_executor_worker/package.json
@@ -18,6 +18,8 @@
     "@crowd/logging": "workspace:*",
     "@crowd/redis": "workspace:*",
     "@crowd/types": "workspace:*",
+    "@crowd/opensearch": "workspace:*",
+    "@crowd/common": "workspace:*",
     "@temporalio/workflow": "~1.11.1",
     "axios": "^1.6.8",
     "moment": "~2.29.4",
