--- a/scripts/scaffold/kafka-connect/tinybird-local-sink.properties
+++ b/scripts/scaffold/kafka-connect/tinybird-local-sink.properties
@@ -3,8 +3,8 @@ connector.class=io.lenses.streamreactor.connect.http.sink.HttpSinkConnector
 tasks.max=1
 topics=activities
 connect.http.method=POST
-connect.http.endpoint=https://api.tinybird.co/v0/events?name=activity_events
-connect.http.request.headers=Content-Type: application/json,Authorization: Bearer key
+connect.http.endpoint=http://tinybird:80/v0/events?name=activities
+connect.http.request.headers=Content-Type: application/json,Authorization: Bearer ${CROWD_TINYBIRD_WORKSPACE_ADMIN_TOKEN}
 connect.http.request.content={{value}}
 connect.http.batch.count=1
 key.converter=org.apache.kafka.connect.storage.StringConverter
