--- a/services/apps/cron_service/package.json
+++ b/services/apps/cron_service/package.json
@@ -15,8 +15,11 @@
     "@crowd/common": "workspace:*",
     "@crowd/data-access-layer": "workspace:*",
     "@crowd/logging": "workspace:*",
+    "@crowd/nango": "workspace:*",
+    "@crowd/temporal": "workspace:*",
     "@crowd/types": "workspace:*",
     "cron": "^2.1.0",
+    "cron-time-generator": "^1.3.0",
     "p-queue": "^8.1.0",
     "pidusage": "^3.0.2",
     "tsx": "^4.7.1",
