Combine activity updates for member unmerging

--- a/services/apps/entity_merging_worker/package.json
+++ b/services/apps/entity_merging_worker/package.json
@@ -18,6 +18,7 @@
     "@crowd/opensearch": "workspace:*",
     "@crowd/redis": "workspace:*",
     "@crowd/types": "workspace:*",
+    "@crowd/queue": "workspace:*",
     "@temporalio/workflow": "~1.11.1",
     "tsx": "^4.7.1",
     "typescript": "^5.6.3"
