improve activity datasource, add smt for removing unwanted fields from payload

--- a/scripts/scaffold/kafka-connect/tinybird-local-sink.properties
+++ b/scripts/scaffold/kafka-connect/tinybird-local-sink.properties
@@ -8,4 +8,8 @@ connect.http.request.headers=Content-Type: application/json,Authorization: Beare
 connect.http.request.content={{value}}
 connect.http.batch.count=1
 key.converter=org.apache.kafka.connect.storage.StringConverter
-value.converter=org.apache.kafka.connect.storage.StringConverter
+value.converter=org.apache.kafka.connect.json.JsonConverter
+
+transforms=FilterActivities
+transforms.FilterActivities.type=org.apache.kafka.connect.transforms.ReplaceField$Value
+transforms.FilterActivities.whitelist=id,type,timestamp,platform,isContribution,score,sourceId,createdAt,updatedAt,sourceParentId,attributes,title,body,channel,url,sentimentLabel,sentimentScore,sentimentScoreMixed,sentimentScoreNeutral,sentimentScoreNegative,sentimentScorePositive,gitIsMainBranch,gitIsIndirectFork,gitLines,gitInsertions,gitDeletions,gitIsMerge
