--- a/scripts/scaffold/kafka-connect/tinybird-local-sink.properties
+++ b/scripts/scaffold/kafka-connect/tinybird-local-sink.properties
@@ -5,11 +5,8 @@ topics=activities
 connect.http.method=POST
 connect.http.endpoint=http://tinybird:80/v0/events?name=activities
 connect.http.request.headers=Content-Type: application/json,Authorization: Bearer ${CROWD_TINYBIRD_WORKSPACE_ADMIN_TOKEN}
-connect.http.request.content={{value}}
-connect.http.batch.count=1
+connect.http.batch.count=100
+connect.http.time.interval=5
 key.converter=org.apache.kafka.connect.storage.StringConverter
-value.converter=org.apache.kafka.connect.json.JsonConverter
-
-transforms=FilterActivities
-transforms.FilterActivities.type=org.apache.kafka.connect.transforms.ReplaceField$Value
-transforms.FilterActivities.whitelist=id,type,timestamp,platform,isContribution,score,sourceId,createdAt,updatedAt,sourceParentId,attributes,title,body,channel,url,sentimentLabel,sentimentScore,sentimentScoreMixed,sentimentScoreNeutral,sentimentScoreNegative,sentimentScorePositive,gitIsMainBranch,gitIsIndirectFork,gitLines,gitInsertions,gitDeletions,gitIsMerge
+value.converter=org.apache.kafka.connect.storage.StringConverter
+connect.http.request.content={{#message}}{{value}}\n{{/message}}
