activityRelations with kafka-connect

--- a/scripts/scaffold/kafka-connect/tinybird-local-activity-relations-sink.properties
+++ b/scripts/scaffold/kafka-connect/tinybird-local-activity-relations-sink.properties
@@ -1,12 +1,13 @@
-name=tinybird-sink
+name=tinybird-activity-relations-sink
 connector.class=io.lenses.streamreactor.connect.http.sink.HttpSinkConnector
 tasks.max=1
-topics=activities
+topics=activityRelations
 connect.http.method=POST
-connect.http.endpoint=http://tinybird:80/v0/events?name=activities
+connect.http.endpoint=http://tinybird:80/v0/events?name=activityRelations
 connect.http.request.headers=Content-Type: application/json,Authorization: Bearer ${CROWD_TINYBIRD_WORKSPACE_ADMIN_TOKEN}
 connect.http.batch.count=100
 connect.http.time.interval=5
 key.converter=org.apache.kafka.connect.storage.StringConverter
 value.converter=org.apache.kafka.connect.storage.StringConverter
-connect.http.request.content={{#message}}{{value}}\n{{/message}}
+value.converter.schemas.enable=false
+connect.http.request.content={{value}}
