generic sequin http sink works, tested with members and activityRelations

--- a/scripts/scaffold/kafka-connect/tinybird-local-sequin-sink.properties
+++ b/scripts/scaffold/kafka-connect/tinybird-local-sequin-sink.properties
@@ -1,9 +1,13 @@
-name=tinybird-activity-relations-sink
+name=tinybird-sequin-sink
 connector.class=io.lenses.streamreactor.connect.http.sink.HttpSinkConnector
 tasks.max=1
-topics=activityRelations
+topics=activityRelations,members,memberIdentities
 connect.http.method=POST
-connect.http.endpoint=http://tinybird:80/v0/events?name=activityRelations
+transforms=extractPrefix
+transforms.extractPrefix.type=org.apache.kafka.connect.transforms.RegexRouter
+transforms.extractPrefix.regex=([^\\-]+)-.*
+transforms.extractPrefix.replacement=$1
+connect.http.endpoint=http://tinybird:80/v0/events?name={{topic}}
 connect.http.request.headers=Content-Type: application/json,Authorization: Bearer ${CROWD_TINYBIRD_WORKSPACE_ADMIN_TOKEN}
 connect.http.batch.count=100
 connect.http.time.interval=5
