--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
   },
   "lint-staged": {
     "**/*.{js,ts,vue}": [
+      "prettier --write",
       "eslint --max-warnings=0 --fix"
     ]
   },
