--- a/services/apps/script_executor_worker/package.json
+++ b/services/apps/script_executor_worker/package.json
@@ -20,9 +20,8 @@
     "@crowd/opensearch": "workspace:*",
     "@crowd/redis": "workspace:*",
     "@crowd/types": "workspace:*",
-    "@crowd/common": "workspace:*",
-    "@crowd/opensearch": "workspace:*",
     "@temporalio/workflow": "~1.11.1",
+    "@temporalio/client": "~1.11.1",
     "axios": "^1.6.8",
     "moment": "~2.29.4",
     "tsx": "^4.7.1",
