set log-level to trace

--- a/services/apps/data_sink_worker/package.json
+++ b/services/apps/data_sink_worker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@crowd/data-sink-worker",
   "scripts": {
-    "start": "SERVICE=data-sink-worker tsx src/main.ts",
+    "start": "SERVICE=data-sink-worker LOG_LEVEL=trace tsx src/main.ts",
     "start:debug:local": "set -a && . ../../../backend/.env.dist.local && . ../../../backend/.env.override.local && set +a && SERVICE=data-sink-worker LOG_LEVEL=trace tsx --inspect=0.0.0.0:9233 src/main.ts",
     "start:debug": "SERVICE=data-sink-worker LOG_LEVEL=trace tsx --inspect=0.0.0.0:9233 src/main.ts",
     "dev:local": "nodemon --watch src --watch ../../libs --ext ts --exec pnpm run start:debug:local",
