--- a/scripts/services/docker/Dockerfile.nango_worker
+++ b/scripts/services/docker/Dockerfile.nango_worker
@@ -14,7 +14,7 @@ RUN pnpm i --frozen-lockfile
 FROM node:20-bookworm-slim as runner
 
 WORKDIR /usr/crowd/app
-RUN npm install -g corepack@latest && corepack enable pnpm && corepack prepare pnpm@9.15.0 --activate
+RUN npm install -g corepack@latest && corepack enable pnpm && corepack prepare pnpm@9.15.0 --activate  && apt update && apt install -y ca-certificates --no-install-recommends && rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /usr/crowd/app/node_modules ./node_modules
 COPY --from=builder /usr/crowd/app/services/base.tsconfig.json ./services/base.tsconfig.json
