add new topics to sequin sink

--- a/scripts/scaffold/kafka-connect/tinybird-local-sequin-sink.properties
+++ b/scripts/scaffold/kafka-connect/tinybird-local-sequin-sink.properties
@@ -1,7 +1,7 @@
 name=tinybird-sequin-sink
 connector.class=io.lenses.streamreactor.connect.http.sink.HttpSinkConnector
 tasks.max=1
-topics=activityRelations,members,memberIdentities
+topics=activityRelations,members,memberIdentities,organizations,collections,insightsProjects,collectionsInsightsProjects
 connect.http.method=POST
 transforms=extractPrefix
 transforms.extractPrefix.type=org.apache.kafka.connect.transforms.RegexRouter
