configurable queue suffixes

--- a/scripts/scaffold/kafka-connect/tinybird-local-sink.properties
+++ b/scripts/scaffold/kafka-connect/tinybird-local-sink.properties
@@ -1,15 +1,11 @@
-name=tinybird-sequin-sink
+name=tinybird-sink
 connector.class=io.lenses.streamreactor.connect.http.sink.HttpSinkConnector
 tasks.max=1
-topics=activityRelations,members,memberIdentities,organizations,collections,insightsProjects,collectionsInsightsProjects
+topics=activities,activityRelations,members,memberIdentities,organizations,collections,insightsProjects,collectionsInsightsProjects
 connect.http.method=POST
-transforms=extractPrefix
-transforms.extractPrefix.type=org.apache.kafka.connect.transforms.RegexRouter
-transforms.extractPrefix.regex=([^\\-]+)-.*
-transforms.extractPrefix.replacement=$1
 connect.http.endpoint=http://tinybird:80/v0/events?name={{topic}}
 connect.http.request.headers=Content-Type: application/json,Authorization: Bearer ${CROWD_TINYBIRD_WORKSPACE_ADMIN_TOKEN}
-connect.http.batch.count=100
+connect.http.batch.count=10
 connect.http.time.interval=5
 key.converter=org.apache.kafka.connect.storage.StringConverter
 value.converter=org.apache.kafka.connect.storage.StringConverter
