Adjust repositories for docker image builder files

--- a/scripts/builders/activities-worker.env
+++ b/scripts/builders/activities-worker.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.activities_worker"
 CONTEXT="../"
-REPO="crowddotdev/activities-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/activities-worker"
 SERVICES="activities-worker"
