--- a/scripts/builders/backend.env
+++ b/scripts/builders/backend.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.backend"
 CONTEXT="../"
-REPO="crowddotdev/backend"
+REPO="sjc.ocir.io/axbydjxa5zuh/backend"
 SERVICES="api job-generator"
