--- a/scripts/builders/cache-worker.env
+++ b/scripts/builders/cache-worker.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.cache_worker"
 CONTEXT="../"
-REPO="crowddotdev/cache-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/cache-worker"
 SERVICES="cache-worker"
