--- a/scripts/builders/cron-service.env
+++ b/scripts/builders/cron-service.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.cron_service"
 CONTEXT="../"
-REPO="crowddotdev/cron-service"
+REPO="sjc.ocir.io/axbydjxa5zuh/cron-service"
 SERVICES="cron-service"
