--- a/scripts/builders/data-sink-worker.env
+++ b/scripts/builders/data-sink-worker.env
@@ -1,5 +1,5 @@
 DOCKERFILE="./services/docker/Dockerfile.data_sink_worker"
 CONTEXT="../"
-REPO="crowddotdev/data-sink-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/data-sink-worker"
 SERVICES="data-sink-worker"
 PRIORITIZED="data-sink-worker"
