--- a/scripts/builders/exports-worker.env
+++ b/scripts/builders/exports-worker.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.exports_worker"
 CONTEXT="../"
-REPO="crowddotdev/exports-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/exports-worker"
 SERVICES="exports-worker"
