--- a/scripts/builders/frontend-dev.env
+++ b/scripts/builders/frontend-dev.env
@@ -1,4 +1,4 @@
 DOCKERFILE="../frontend/Dockerfile"
 CONTEXT="../frontend"
-REPO="crowddotdev/frontend-dev"
+REPO="sjc.ocir.io/axbydjxa5zuh/frontend-dev"
 SERVICES="frontend-dev"
