--- a/scripts/builders/frontend.env
+++ b/scripts/builders/frontend.env
@@ -1,4 +1,4 @@
 DOCKERFILE="../frontend/Dockerfile"
 CONTEXT="../frontend"
-REPO="crowddotdev/frontend"
+REPO="sjc.ocir.io/axbydjxa5zuh/frontend"
 SERVICES="frontend"
