--- a/scripts/builders/members-enrichment-worker.env
+++ b/scripts/builders/members-enrichment-worker.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.members_enrichment_worker"
 CONTEXT="../"
-REPO="crowddotdev/members-enrichment-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/members-enrichment-worker"
 SERVICES="members-enrichment-worker"
