--- a/scripts/builders/merge-suggestions-worker.env
+++ b/scripts/builders/merge-suggestions-worker.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.merge_suggestions_worker"
 CONTEXT="../"
-REPO="crowddotdev/merge-suggestions-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/merge-suggestions-worker"
 SERVICES="merge-suggestions-worker"
