--- a/scripts/builders/nango-worker.env
+++ b/scripts/builders/nango-worker.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.nango_worker"
 CONTEXT="../"
-REPO="crowddotdev/nango-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/nango-worker"
 SERVICES="nango-worker"
