--- a/scripts/builders/organizations-enrichment-worker.env
+++ b/scripts/builders/organizations-enrichment-worker.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.organizations_enrichment_worker"
 CONTEXT="../"
-REPO="crowddotdev/organizations-enrichment-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/organizations-enrichment-worker"
 SERVICES="organizations-enrichment-worker"
