--- a/scripts/builders/profiles-worker.env
+++ b/scripts/builders/profiles-worker.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.profiles_worker"
 CONTEXT="../"
-REPO="crowddotdev/profiles-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/profiles-worker"
 SERVICES="profiles-worker"
