--- a/scripts/builders/script-executor-worker.env
+++ b/scripts/builders/script-executor-worker.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.script_executor_worker"
 CONTEXT="../"
-REPO="crowddotdev/script-executor-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/script-executor-worker"
 SERVICES="script-executor-worker"
