--- a/scripts/builders/webhook-api.env
+++ b/scripts/builders/webhook-api.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.webhook_api"
 CONTEXT="../"
-REPO="crowddotdev/webhook-api"
+REPO="sjc.ocir.io/axbydjxa5zuh/webhook-api"
 SERVICES="webhook-api"
