--- a/scripts/builders/entity-merging-worker.env
+++ b/scripts/builders/entity-merging-worker.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.entity_merging_worker"
 CONTEXT="../"
-REPO="crowddotdev/entity-merging-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/entity-merging-worker"
 SERVICES="entity-merging-worker"
