--- a/scripts/builders/integration-run-worker.env
+++ b/scripts/builders/integration-run-worker.env
@@ -1,5 +1,5 @@
 DOCKERFILE="./services/docker/Dockerfile.integration_run_worker"
 CONTEXT="../"
-REPO="crowddotdev/integration-run-worker"
+REPO="sjc.ocir.io/axbydjxa5zuh/integration-run-worker"
 SERVICES="integration-run-worker"
 PRIORITIZED="integration-run-worker"
