--- a/scripts/builders/nango-webhook-api.env
+++ b/scripts/builders/nango-webhook-api.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.nango_webhook_api"
 CONTEXT="../"
-REPO="crowddotdev/nango-webhook-api"
+REPO="sjc.ocir.io/axbydjxa5zuh/nango-webhook-api"
 SERVICES="nango-webhook-api"
