--- a/scripts/builders/script-executor.env
+++ b/scripts/builders/script-executor.env
@@ -1,4 +1,4 @@
 DOCKERFILE="./services/docker/Dockerfile.script_executor"
 CONTEXT="../"
-REPO="crowddotdev/script-executor"
+REPO="sjc.ocir.io/axbydjxa5zuh/script-executor"
 SERVICES="script-executor"
