--- a/.github/workflows/lf-oracle-production-deploy.yaml
+++ b/.github/workflows/lf-oracle-production-deploy.yaml
@@ -9,8 +9,8 @@ on:
 
 env:
   CLOUD_ENV: lf-oracle-production
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+  ORACLE_DOCKER_USERNAME: ${{ secrets.ORACLE_DOCKER_USERNAME }}
+  ORACLE_DOCKER_PASSWORD: ${{ secrets.ORACLE_DOCKER_PASSWORD }}
   ORACLE_USER: ${{ secrets.ORACLE_USER }}
   ORACLE_TENANT: ${{ secrets.ORACLE_TENANT }}
   ORACLE_REGION: ${{ secrets.ORACLE_REGION }}
@@ -23,14 +23,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      
+
       - name: Install OCI
         run: |
           curl -L https://raw.githubusercontent.com/oracle/oci-cli/master/scripts/install/install.sh > install.sh
           chmod +x install.sh
           ./install.sh --accept-all-defaults
           echo "OCI_CLI_DIR=/home/runner/bin" >> $GITHUB_ENV
-      
+
       - name: Update PATH
         run: echo "${{ env.OCI_CLI_DIR }}" >> $GITHUB_PATH
 
