--- a/.github/workflows/lf-oracle-staging-deploy.yaml
+++ b/.github/workflows/lf-oracle-staging-deploy.yaml
@@ -9,8 +9,8 @@ on:
 
 env:
   CLOUD_ENV: lf-oracle-staging
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+  ORACLE_DOCKER_USERNAME: ${{ secrets.ORACLE_DOCKER_USERNAME }}
+  ORACLE_DOCKER_PASSWORD: ${{ secrets.ORACLE_DOCKER_PASSWORD }}
   ORACLE_USER: ${{ secrets.ORACLE_USER }}
   ORACLE_TENANT: ${{ secrets.ORACLE_TENANT }}
   ORACLE_REGION: ${{ secrets.ORACLE_REGION }}
