--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,33 +23,21 @@
   },
   "lint-staged": {
     "**/*.{js,ts,vue}": [
-      "prettier --write",
       "eslint --max-warnings=0 --fix"
     ]
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.1.3",
-    "@cubejs-client/core": "^0.31.63",
-    "@cubejs-client/vue3": "^0.31.63",
     "@datadog/browser-rum": "^5.9.0",
     "@formbricks/js": "1.2.0",
     "@linuxfoundation/lfx-ui-core": "^0.0.12",
-    "@loomhq/loom-embed": "^1.5.0",
     "@nangohq/frontend": "^0.9.0",
     "@nangohq/frontend-v2": "npm:@nangohq/frontend@^0.52.4",
-    "@octokit/core": "^3.6.0",
-    "@tiptap/extension-link": "^2.1.12",
-    "@tiptap/extension-placeholder": "^2.1.12",
-    "@tiptap/pm": "^2.1.12",
-    "@tiptap/starter-kit": "^2.1.12",
-    "@tiptap/vue-3": "^2.1.12",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-airbnb": "^7.0.0",
     "@vuelidate/core": "^2.0.1",
     "@vuelidate/validators": "^2.0.1",
     "@vueuse/core": "^9.13.0",
-    "auth0-js": "^9.21.0",
-    "auth0-spa-js": "^1.6.5",
     "axios": "^1.6.8",
     "chart.js": "^3.9.1",
     "chartjs-adapter-moment": "^1.0.1",
@@ -57,29 +45,24 @@
     "element-plus": "^2.3.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
-    "file-saver": "2.0.2",
     "lodash": "^4.17.21",
     "logrocket": "^3.0.1",
     "logrocket-vuex": "^0.0.3",
     "marked": "^4.3.0",
     "node-emoji": "^1.11.0",
     "nprogress": "0.2.0",
-    "papaparse": "^5.4.1",
     "pinia": "^2.0.33",
     "pluralize": "^8.0.0",
     "qs": "^6.11.1",
     "socket.io-client": "^4.6.1",
-    "uuid": "8.3.0",
     "vite": "^4.4.7",
     "vue": "^3.3.1",
     "vue-3-sanitize": "^0.1.4",
     "vue-draggable-next": "^2.2.1",
     "vue-grid-layout": "3.0.0-beta1",
-    "vue-json-pretty": "^2.2.4",
     "vue-router": "^4.1.6",
     "vue3-click-away": "^1.2.4",
     "vue3-lazyload": "^0.3.6",
-    "vuedraggable": "^4.1.0",
     "vuex": "^4.1.0",
     "yup": "^0.32.11"
   },
@@ -87,20 +70,14 @@
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
-    "@storybook/blocks": "^7.6.10",
-    "@storybook/test": "^7.6.10",
     "@storybook/vue3": "^7.6.10",
     "@storybook/vue3-vite": "^7.6.10",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@types/auth0-js": "^9.21.0",
     "@types/pluralize": "^0.0.33",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@vue/compiler-sfc": "^3.2.29",
     "@vue/eslint-config-typescript": "^11.0.3",
     "autoprefixer": "^10.4.14",
-    "concurrently": "^7.6.0",
-    "css-minimizer-webpack-plugin": "^4.2.2",
     "cypress": "^13.7.3",
     "cypress-mailosaur": "^2.13.0",
     "dotenv": "^16.0.3",
@@ -110,17 +87,14 @@
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-vue": "^9.10.0",
     "lint-staged": "^15.4.3",
-    "mini-css-extract-plugin": "^2.7.5",
     "postcss": "^8.4.21",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.60.0",
     "storybook": "^7.6.10",
     "tailwind-config-viewer": "^1.7.2",
     "tailwindcss": "^3.2.7",
-    "terser-webpack-plugin": "^5.3.7",
     "typescript": "~5.0.4",
     "unplugin-auto-import": "^0.15.2",
-    "unplugin-vue-components": "^0.24.1",
-    "wait-on": "^7.2.0"
+    "unplugin-vue-components": "^0.24.1"
   }
 }
