Initialize Tinybird for Insights (#2803)
Co-authored-by: Raúl Santos <4837+borfast@users.noreply.github.com>
Co-authored-by: joanagmaia <jmaia@contractor.linuxfoundation.org>
Co-authored-by: Joana Maia <joana@crowd.dev>

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ yarn-error.log*
 api-test/__pycache__/api_test.cpython-39-pytest-6.2.4.pyc
 
 # python
+.venv/
 **/*-venv
 **/venv
 **/venv*
@@ -50,3 +51,7 @@ api-test/__pycache__/api_test.cpython-39-pytest-6.2.4.pyc
 docker/volume
 
 services/libs/*/dist
+
+**/.tinyb
+**/.tinyenv
+services/libs/tinybird/.diff_tmp
