--- a/scripts/scaffold/kafka-connect/Dockerfile
+++ b/scripts/scaffold/kafka-connect/Dockerfile
@@ -6,8 +6,10 @@ RUN yum install -y jq findutils unzip
 
 RUN confluent-hub install snowflakeinc/snowflake-kafka-connector:2.5.0 --no-prompt
 RUN confluent-hub install questdb/kafka-questdb-connector:0.12 --no-prompt
+COPY kafka-connect-http/ /usr/share/confluent-hub-components/kafka-connect-http/
+
 
 VOLUME /storage
 
-USER appuser
+USER root
 
