Download dependencies automatically when building kafka-connect image
And upgrade questdb-kafka-connector from 0.12 to 0.14
The new version is not available on confluent-hub, so we download it
manually from github releases

--- a/scripts/scaffold/kafka-connect/Dockerfile
+++ b/scripts/scaffold/kafka-connect/Dockerfile
@@ -5,8 +5,8 @@ USER root
 RUN yum install -y jq findutils unzip
 
 RUN confluent-hub install snowflakeinc/snowflake-kafka-connector:2.5.0 --no-prompt
-RUN confluent-hub install questdb/kafka-questdb-connector:0.12 --no-prompt
-COPY kafka-connect-http/ /usr/share/confluent-hub-components/kafka-connect-http/
+COPY tmp/questdb-connector/ /usr/share/confluent-hub-components/questdb-connector/
+COPY tmp/kafka-connect-http/ /usr/share/confluent-hub-components/kafka-connect-http/
 
 
 VOLUME /storage
