--- a/services/apps/nango_worker/package.json
+++ b/services/apps/nango_worker/package.json
@@ -16,6 +16,7 @@
     "@crowd/archetype-worker": "workspace:*",
     "@crowd/logging": "workspace:*",
     "@crowd/common": "workspace:*",
+    "@crowd/temporal": "workspace:*",
     "@crowd/nango": "workspace:*",
     "@crowd/redis": "workspace:*",
     "@crowd/data-access-layer": "workspace:*",
