--- a/services/apps/merge_suggestions_worker/package.json
+++ b/services/apps/merge_suggestions_worker/package.json
@@ -24,6 +24,7 @@
     "@temporalio/workflow": "~1.11.1",
     "axios": "^1.6.8",
     "fast-levenshtein": "^3.0.0",
+    "lodash.uniqby": "^4.7.0",
     "tsx": "^4.7.1",
     "typescript": "^5.6.3"
   },
